classDiagram
    direction TB

    namespace Gestion_Entreprises_Succursales_Utilisateurs {
        class Entreprise {
            +int id
            +String nom
            +String secteur
            +boolean has_branches
        }
        class Succursale {
            +int id
            +String nom
            +boolean is_active
        }
        class Utilisateur {
            +int id
            +String username
        }
    }

    namespace Gestion_Articles_Stocks {
        class Article {
            +String article_id
            +String nom_scientifique
            +String nom_commercial
        }
        class Stock {
            +int id
            +Decimal Qte
            +Decimal seuilAlert
        }
        class Unite {
            +int id
            +String libelle
        }
        class TypeArticle {
            +int id
            +String libelle
        }
        class SousTypeArticle {
            +int id
            +String libelle
        }
    }

    namespace Flux_Entrees_Ventes {
        class Entree {
            +int id
            +String libele
            +DateTime date_op
        }
        class LigneEntree {
            +int id
            +Decimal quantite
            +Decimal quantite_restante
            +Decimal prix_unitaire
            +Decimal prix_vente
        }
        class Sortie {
            +int id
            +String statut
            +DateTime date_creation
        }
        class LigneSortie {
            +int id
            +Decimal quantite
            +Decimal prix_unitaire
        }
    }

    namespace Tracabilite_FIFO_Marges {
        class LigneSortieLot {
            +int id
            +Decimal quantite
            +Decimal prix_achat
            +Decimal prix_vente
        }
        class BeneficeLot {
            +int id
            +Decimal quantite_vendue
            +Decimal benefice_total
        }
    }

    namespace Finances_Caisse_Clients {
        class Client {
            +String id
            +String nom
        }
        class ClientEntreprise {
            +int id
            +boolean is_special
        }
        class DetteClient {
            +int id
            +Decimal montant_total
            +String statut
        }
        class MouvementCaisse {
            +int id
            +Decimal montant
            +String type_mouvement
        }
        class DetailMouvementCaisse {
            +int id
            +Decimal montant
        }
        class TypeCaisse {
            +int id
            +String libelle
        }
        class Devise {
            +int id
            +String sigle
            +boolean est_principal
        }
    }

    Entreprise "1" *-- "0..*" Succursale : Possede
    TypeArticle "1" <-- "0..*" SousTypeArticle : Structure
    SousTypeArticle "1" <-- "0..*" Article : Classification
    Unite "1" <-- "0..*" Article : Mesure
    Article "1" -- "1" Stock : Quantite
    Entree "1" *-- "1..*" LigneEntree : Compose
    Sortie "1" *-- "1..*" LigneSortie : Compose
    LigneSortieLot "0..*" -- "1" BeneficeLot : Analyse
    Client "1" -- "0..*" ClientEntreprise : Lien entreprise
    Client "1" <-- "0..*" DetteClient : Concerne
    MouvementCaisse "1" *-- "0..*" DetailMouvementCaisse : Ventile
    TypeCaisse "0..1" <-- "0..*" DetailMouvementCaisse : Cible
    Utilisateur "0..1" <-- "0..*" MouvementCaisse : Enregistre
    Article "1" <-- "0..*" LigneEntree : Achat
    Article "1" <-- "0..*" LigneSortie : Vente
    LigneSortie "1" *-- "0..*" LigneSortieLot : FIFO
    LigneEntree "1" <-- "0..*" LigneSortieLot : Lot source
    LigneEntree "1" <-- "0..*" BeneficeLot : Base achat
    LigneSortie "0..1" <-- "0..*" BeneficeLot : Base vente
    Sortie "1" -- "1" DetteClient : Credit
    Sortie "0..1" <-- "0..*" MouvementCaisse : Encaissement
    Entree "0..1" <-- "0..*" MouvementCaisse : Decaissement
    Client "0..1" <-- "0..*" Sortie : Facture
    Devise "0..1" <-- "0..*" LigneEntree : Devise lot
    Devise "0..1" <-- "0..*" Sortie : Devise vente
    Devise "0..1" <-- "0..*" DetteClient : Devise dette
    Devise "0..1" <-- "0..*" MouvementCaisse : Devise caisse
